--- a/templates/topic/show.html.twig
+++ b/templates/topic/show.html.twig
@@ -89,6 +89,8 @@
                     </div>
                 {% endfor %}
             </div>
+        {% else %}
+            <h3 class="text-gray-400 text-center mb-5">No posts yet.</h3>
         {% endif %}
 
         <hr/>
