--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="min-h-screen">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
@@ -12,10 +12,13 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body class="bg-gray-800 text-white">
+    <body class="bg-gray-800 text-white min-h-screen position-relative">
     {{ include('nav.html.twig') }}
-        {{ include('error.html.twig') }}
-    {% block body %}{% endblock %}
+    {{ include('error.html.twig') }}
+    <div class="min-h-screen">
+        {% block body %}{% endblock %}
+    </div>
 
+    {{ include('footer.html.twig') }}
     </body>
 </html>
