--- a/templates/topic/show.html.twig
+++ b/templates/topic/show.html.twig
@@ -13,17 +13,20 @@
 
         <div class="bg-gray-900 border-4 border-gray-600 shadow-lg p-6 mb-8">
             <div class="flex space-x-4">
-                {{ form_start(lockForm, {'attr': {'class': 'space-y-4'}}) }}
-                <button type="submit"
-                        class="inline-block bg-yellow-600 text-white py-2 px-4 rounded-md hover:bg-yellow-500 transition duration-200 ease-in-out">
-                    {% if topic.isLocked %}
-                        Unlock Topic
-                    {% else %}
-                        Lock Topic
-                    {% endif %}
-                </button>
-                {{ form_end(lockForm) }}
+                {% if app.user is same as topic.author or is_granted('ROLE_ADMIN') %}
+                    {{ form_start(lockForm, {'attr': {'class': 'space-y-4'}}) }}
+                    <button type="submit"
+                            class="inline-block bg-yellow-600 text-white py-2 px-4 rounded-md hover:bg-yellow-500 transition duration-200 ease-in-out">
+                        {% if topic.isLocked %}
+                            Unlock Topic
+                        {% else %}
+                            Lock Topic
+                        {% endif %}
+                    </button>
+                    {{ form_end(lockForm) }}
+                {% endif %}
 
+                {% if app.user is same as topic.author %}
                 {{ form_start(visibilityForm, {'attr': {'class': 'space-y-4'}}) }}
                 <button type="submit"
                         class="inline-block bg-orange-600 text-white py-2 px-4 rounded-md hover:bg-orange-500 transition duration-200 ease-in-out">
@@ -34,25 +37,28 @@
                     {% endif %}
                 </button>
                 {{ form_end(visibilityForm) }}
+                {% endif %}
 
-                <div class="mb-6">
-                    <a href="{{ path('topic_move', {'id': topic.id}) }}"
-                       class="inline-block bg-green-600 text-white py-2 px-4 rounded-md hover:bg-green-500 transition duration-200 ease-in-out">
-                        Move Topic
-                    </a>
-                </div>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <div class="mb-6">
+                        <a href="{{ path('topic_move', {'id': topic.id}) }}"
+                           class="inline-block bg-green-600 text-white py-2 px-4 rounded-md hover:bg-green-500 transition duration-200 ease-in-out">
+                            Move Topic
+                        </a>
+                    </div>
+                {% endif %}
             </div>
 
             <div class="text-gray-300">
-                <p><span class="font-bold">Author:</span> {{ topic.author.username }} <span
+                <p><span class="font-bold">Author:</span><a href="{{ path('user_profile_public', {'id': topic.author.id}) }}">{{ topic.author.username }}</a><span
                             class="text-sm text-gray-500">{{ topic.createdAt|date('Y-m-d') }}</span></p>
                 <h4 class="text-3xl font-extrabold mt-4 mb-2 text-yellow-400">{{ topic.title }}</h4>
                 <p class="mb-4">{{ topic.body }}</p>
                 <div class="flex space-x-4">
-                    <a href="{{ path('topic_edit', {'id': topic.id}) }}"
-                       class="inline-block bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition duration-200 ease-in-out">Edit</a>
-                    <a href="{{ path('admin_manage', {'user': topic.author.id}) }}"
-                       class="inline-block bg-purple-700 text-white py-2 px-4 rounded-md hover:bg-purple-600 transition duration-200 ease-in-out">Manage</a>
+                    {% if app.user is same as topic.author or is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('topic_edit', {'id': topic.id}) }}"
+                           class="inline-block bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition duration-200 ease-in-out">Edit</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -80,7 +86,8 @@
                                     <a class="ml-1 text-sm" href="#{{ post.id }}">#{{ paginator.postIndex(key) }}</a>
                                 </div>
                                 {% if app.user is same as post.author %}
-                                <a href="{{ path('post_edit', {'id': post.id, 'page': paginator.page }) }}" class="inline-block text-blue-500 mt-2">Edit</a>
+                                    <a href="{{ path('post_edit', {'id': post.id, 'page': paginator.page }) }}"
+                                       class="inline-block text-blue-500 mt-2">Edit</a>
                                 {% endif %}
                             </div>
                         </div>
