--- a/templates/user/public_profile.html.twig
+++ b/templates/user/public_profile.html.twig
@@ -4,6 +4,11 @@
 
 {% block body %}
     <div class="container mx-auto p-6 font-serif">
+        {% if app.user is same as user and not user.verified %}
+        <div class="bg-red-600 text-white px-3 py-2 shadow-md mb-2">
+            <p>Account is not verified, actions are restricted.</p>
+        </div>
+        {% endif %}
         <!-- User Information -->
         <div class="bg-gray-800 p-6 shadow-lg border-4 border-gray-600 my-3">
             <div>
