--- a/templates/user/account.html.twig
+++ b/templates/user/account.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container mx-auto p-6 font-serif">
-        <a href="{{ path('user_profile_public', { id: user.id }) }}">< profile</a>
+        <a href="{{ path('user_profile_public', { id: user.id }) }}"><- profile</a>
         <h4 class="text-2xl font-extrabold text-gray-100 my-5">Account Settings</h4>
 
         <div class="bg-gray-800 p-6 shadow-lg border-4 border-gray-600 mb-6">
