--- a/templates/board/create.html.twig
+++ b/templates/board/create.html.twig
@@ -7,16 +7,23 @@
         <h4 class="text-3xl font-extrabold text-gray-100 mb-6">Create a New Board</h4>
 
         {{ form_start(form, {'attr': {'class': 'space-y-6'}}) }}
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg border-4 border-gray-600">
+        <div class="bg-gray-800 p-6 shadow-lg border-4 border-gray-600">
             <!-- Title Field -->
             <div class="mb-4">
                 {{ form_label(form.title, null, {'label_attr': {'class': 'text-lg font-medium text-gray-200'}}) }}
                 <div class="mt-2">
                     {{ form_widget(form.title, {
                         'attr': {
-                            'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
+                            'class': 'w-full bg-gray-700 text-white border border-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
                         }
                     }) }}
+                    {% if form.title.vars.errors|length > 0 %}
+                        <div>
+                            {% for error in form.title.vars.errors %}
+                                <div class="text-red-400">{{ error.message }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
 
@@ -26,9 +33,16 @@
                 <div class="mt-2">
                     {{ form_widget(form.description, {
                         'attr': {
-                            'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
+                            'class': 'w-full bg-gray-700 text-white border border-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
                         }
                     }) }}
+                    {% if form.description.vars.errors|length > 0 %}
+                        <div>
+                            {% for error in form.description.vars.errors %}
+                                <div class="text-red-400">{{ error.message }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
 
@@ -38,7 +52,7 @@
                 <div class="mt-2">
                     {{ form_widget(form.access, {
                         'attr': {
-                            'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
+                            'class': 'w-full bg-gray-700 text-white border border-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
                         }
                     }) }}
                 </div>
@@ -46,7 +60,7 @@
 
             <!-- Submit Button -->
             <div class="mt-6">
-                <button type="submit" class="inline-block bg-yellow-600 text-white py-2 px-6 rounded-md hover:bg-yellow-500 transition duration-200 ease-in-out">
+                <button type="submit" class="inline-block bg-yellow-600 text-white py-2 px-6 hover:bg-yellow-500 transition duration-200 ease-in-out">
                     Create Board
                 </button>
             </div>
