--- a/templates/board/edit.html.twig
+++ b/templates/board/edit.html.twig
@@ -6,38 +6,52 @@
     <div class="container mx-auto p-6 font-serif">
         <h4 class="text-3xl font-extrabold text-gray-100 mb-6">Edit Board</h4>
 
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg border-4 border-gray-600 mb-6">
+        <div class="bg-gray-800 p-6 shadow-lg border-4 border-gray-600 mb-6">
             {{ form_start(form) }}
                 <div class="space-y-4">
                     <div class="mb-6">
                         {{ form_label(form.title, null, {'label_attr': {'class': 'text-lg text-gray-200 font-semibold'}}) }}
                         {{ form_widget(form.title, {
                             'attr': {
-                                'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition'
+                                'class': 'w-full bg-gray-700 text-white border border-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition'
                             }
                         }) }}
+                        {% if form.title.vars.errors|length > 0 %}
+                            <div>
+                                {% for error in form.title.vars.errors %}
+                                    <div class="text-red-400">{{ error.message }}</div>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
                     </div>
 
                     <div class="mb-6">
                         {{ form_label(form.description, null, {'label_attr': {'class': 'text-lg text-gray-200 font-semibold'}}) }}
                         {{ form_widget(form.description, {
                             'attr': {
-                                'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition'
+                                'class': 'w-full bg-gray-700 text-white border border-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition'
                             }
                         }) }}
+                        {% if form.description.vars.errors|length > 0 %}
+                            <div>
+                                {% for error in form.description.vars.errors %}
+                                    <div class="text-red-400">{{ error.message }}</div>
+                                {% endfor %}
+                            </div>
+                        {% endif %}
                     </div>
 
                     <div class="mb-6">
                         {{ form_label(form.access, null, {'label_attr': {'class': 'text-lg text-gray-200 font-semibold'}}) }}
                         {{ form_widget(form.access, {
                             'attr': {
-                                'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition'
+                                'class': 'w-full bg-gray-700 text-white border border-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition'
                             }
                         }) }}
                     </div>
 
                     <div class="mt-6">
-                        <button type="submit" class="inline-block bg-indigo-600 text-white py-2 px-6 rounded-md hover:bg-indigo-700 transition duration-200 ease-in-out">
+                        <button type="submit" class="inline-block bg-indigo-600 text-white py-2 px-6 hover:bg-indigo-700 transition duration-200 ease-in-out">
                             Save Changes
                         </button>
                     </div>
