--- a/templates/board/show.html.twig
+++ b/templates/board/show.html.twig
@@ -8,9 +8,9 @@
         <div class="bg-gray-900 border-4 border-gray-600 shadow-lg p-4 mb-5 space-y-2">
             <h4 class="text-3xl text-yellow-400 font-extrabold">{{ board.title }}</h4>
             <p class="text-lg text-gray-200">{{ board.description }}</p>
-            {% if is_granted('board.edit') %}
+            {% if is_granted('ROLE_ADMIN') %}
                 <a href="{{ path('board_edit', {'id': board.id}) }}"
-                   class="inline-block bg-orange-600 text-white py-2 px-6 hover:bg-orange-500 transition duration-200 ease-in-out">Edit
+                   class="inline-block text-blue-500">Edit
                     Board</a>
             {% endif %}
         </div>
@@ -51,6 +51,15 @@
                             <td class="px-3 py-2 border-b border-gray-600">
                                 {% if data.topic.isImportant %}
                                     <span class="text-red-400">[Important]</span>
+                                {% endif %}
+                                {% if data.topic.isLocked %}
+                                    <div style="width: 20px; transform: translateY(3px)" class="inline-block">
+                                        <svg class="text-orange-500" viewBox="0 0 24 23" fill="none" stroke="currentColor"
+                                             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                            <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                                            <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                                        </svg>
+                                    </div>
                                 {% endif %}
                                 <a href="{{ path('topic_show', {'id': data.topic.id}) }}"
                                    class="text-yellow-400 hover:underline transition duration-200 ease-in-out">
