--- a/templates/topic/edit.html.twig
+++ b/templates/topic/edit.html.twig
@@ -7,7 +7,7 @@
         <h4 class="text-3xl font-extrabold text-gray-100 mb-6">Edit Topic</h4>
 
         {{ form_start(form, {'attr': {'class': 'space-y-6'}}) }}
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg border-4 border-gray-600">
+        <div class="bg-gray-800 p-6 shadow-lg border-4 border-gray-600">
 
             <!-- Title Field -->
             <div class="mb-4">
@@ -15,9 +15,16 @@
                 <div class="mt-2">
                     {{ form_widget(form.title, {
                         'attr': {
-                            'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
+                            'class': 'w-full bg-gray-700 text-white border border-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
                         }
                     }) }}
+                    {% if form.body.vars.errors|length > 0 %}
+                        <div>
+                            {% for error in form.title.vars.errors %}
+                                <div class="text-red-400">{{ error.message }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
 
@@ -27,15 +34,22 @@
                 <div class="mt-2">
                     {{ form_widget(form.body, {
                         'attr': {
-                            'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
+                            'class': 'w-full bg-gray-700 text-white border border-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
                         }
                     }) }}
+                    {% if form.body.vars.errors|length > 0 %}
+                        <div>
+                            {% for error in form.body.vars.errors %}
+                                <div class="text-red-400">{{ error.message }}</div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
 
             <!-- Submit Button -->
             <div class="mt-6">
-                <button type="submit" class="inline-block bg-yellow-600 text-white py-2 px-6 rounded-md hover:bg-yellow-500 transition duration-200 ease-in-out">
+                <button type="submit" class="inline-block bg-yellow-600 text-white py-2 px-6 hover:bg-yellow-500 transition duration-200 ease-in-out">
                     Update Topic
                 </button>
             </div>
