--- a/templates/topic/show.html.twig
+++ b/templates/topic/show.html.twig
@@ -39,8 +39,17 @@
                 <!-- Topic Content Section -->
                 <section class="w-full md:w-3/4">
                     <!-- Topic Header -->
-                    <div class="flex items-center justify-between my-2">
+                    <div class="flex  my-2">
                         <!-- Title -->
+                        {% if topic.isLocked %}
+                            <div style="width: 20px" class="mr-2">
+                                <svg class="text-orange-500" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                                    <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                                </svg>
+                            </div>
+                        {% endif %}
                         <span class="text-l font-bold text-yellow-400">
                             {{ topic.title }}
                         </span>
@@ -142,12 +151,12 @@
             <div>
                 {{ form_widget(form.body, {
                     'attr': {
-                        'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
+                        'class': 'w-full bg-gray-700 text-white border border-gray-600 py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
                     }
                 }) }}
             </div>
             <button type="submit"
-                    class="inline-block bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-500 transition duration-200 ease-in-out">
+                    class="inline-block bg-blue-600 text-white py-2 px-4 hover:bg-blue-500 transition duration-200 ease-in-out">
                 Submit
             </button>
             {{ form_end(form) }}
