--- a/templates/user/public_profile.html.twig
+++ b/templates/user/public_profile.html.twig
@@ -12,7 +12,7 @@
         <!-- User Information -->
         <div class="bg-gray-800 p-6 shadow-lg border-4 border-gray-600 my-3">
             <div>
-                <strong class="text-lg text-gray-200 inline-block self-center">{{ user.username }}</strong>
+                <strong class="text-lg text-gray-200 inline-block self-center mr-3">{{ user.username }}</strong>
                 {% if app.user is same as user %}
                     <a class="inline-block text-blue-500 mx-2"
                        href="{{ path('user_account') }}">Manage Account</a>
